--- a/pms/report/traveller_report_action.xml
+++ b/pms/report/traveller_report_action.xml
@@ -5,8 +5,8 @@
             <field name="name">Traveller Report</field>
             <field name="model">pms.checkin.partner</field>
             <field name="report_type">qweb-pdf</field>
-            <field name="report_name">pms.report_viajero</field>
-            <field name="report_file">pms.report_viajero</field>
+            <field name="report_name">pms.traveller_report</field>
+            <field name="report_file">pms.traveller_report</field>
             <field name="paperformat_id" ref="traveller_report_paperformat" />
             <field
                 name="print_report_name"
