--- a/pms/views/pms_folio_views.xml
+++ b/pms/views/pms_folio_views.xml
@@ -186,6 +186,19 @@
                         bg_color="bg-warning"
                         attrs="{'invisible': [('payment_state', '!=', 'partial')]}"
                     />
+                    <widget
+                        name="web_ribbon"
+                        title="Staff"
+                        bg_color="bg-info"
+                        attrs="{'invisible': [('reservation_type', 'not in', 'staff')]}"
+                    />
+
+                    <widget
+                        name="web_ribbon"
+                        title="Out of Service"
+                        bg_color="bg-dark"
+                        attrs="{'invisible': [('reservation_type', 'not in', 'out')]}"
+                    />
                     <h2>
                         <field name="name" />
                     </h2>
@@ -542,12 +555,17 @@
                 decoration-muted="state == 'cancel'"
                 default_order="create_date desc"
             >
-                <field name="name" />
+                <field
+                    name="name"
+                    decoration-info="reservation_type == 'staff'"
+                    decoration-bf="reservation_type == 'out'"
+                />
                 <field name="partner_id" invisible="1" />
                 <field name="partner_name" select="1" />
                 <field name="date_order" select="1" />
                 <field name="user_id" widget="many2one_avatar_user" optional="show" />
                 <field name="reservation_ids" widget="many2many_tags" optional="show" />
+                <field name="reservation_type" invisible="1" />
                 <field
                     name="amount_total"
                     sum="Total amount"
