[IMP]:added create and autocomplete of partner_id in folio

--- a/pms/views/pms_folio_views.xml
+++ b/pms/views/pms_folio_views.xml
@@ -55,6 +55,19 @@
                         />
                     </bold>
                 </div>
+                <div
+                    class="alert alert-warning"
+                    role="alert"
+                    style="margin-bottom:0px;"
+                    attrs="{'invisible': [('is_possible_existing_customer','=',False)]}"
+                >
+                    There is a customer with this email or mobile, do you want to add it to the reservation?
+                    <field name="is_possible_existing_customer" invisible="1" />
+                    <field
+                        name="add_possible_customer"
+                        attrs="{'invisible': [('is_possible_existing_customer','=',False)]}"
+                    />
+                </div>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
                         <button
@@ -209,6 +222,14 @@
                             string="General Info"
                             name="contact_details"
                         >
+                            <field
+                                name="document_type"
+                                attrs="{'invisible':[('reservation_type','in',('out'))]}"
+                            />
+                            <field
+                                name="document_number"
+                                attrs="{'invisible':[('reservation_type','in',('out'))]}"
+                            />
                             <field
                                 name="partner_name"
                                 placeholder="Guest"
