--- a/pms/views/pms_reservation_views.xml
+++ b/pms/views/pms_reservation_views.xml
@@ -322,6 +322,7 @@
                             name="contact_details"
                         >
                             <field name="partner_id" invisible="1" />
+                            <field name="partner_id" invisible="1" />
                             <field
                                 name="document_type"
                                 attrs="{'invisible':[('reservation_type','in',('out'))]}"
