--- a/pms/views/pms_checkin_partner_views.xml
+++ b/pms/views/pms_checkin_partner_views.xml
@@ -38,6 +38,19 @@
                             />
                         </bold>
                     </div>
+                    <div
+                        class="alert alert-warning"
+                        role="alert"
+                        style="margin-bottom:0px;"
+                        attrs="{'invisible': [('is_possible_existing_customer_id','=',False)]}"
+                    >
+                        There is a customer with this email or mobile, do you want to add it to the reservation?
+                        <field name="is_possible_existing_customer_id" invisible="1" />
+                        <field
+                            name="add_possible_customer"
+                            attrs="{'invisible': [('is_possible_existing_customer_id','=',False)]}"
+                        />
+                    </div>
                     <group name="group_top">
                         <group name="group_left">
                             <field
