[IMP]: Added email_information and privacy_policy fields in pms.property

--- a/pms/views/pms_property_views.xml
+++ b/pms/views/pms_property_views.xml
@@ -85,6 +85,12 @@
                                 <field name="room_ids" />
                             </group>
                         </page>
+                        <page string="Email Configuration">
+                            <group>
+                                <field name="mail_information"/>
+                                <field name = "privacy_policy"/>
+                            </group>
+                        </page>
                     </notebook>
                 </sheet>
             </form>
