--- a/pms/views/pms_property_views.xml
+++ b/pms/views/pms_property_views.xml
@@ -86,9 +86,17 @@
                             </group>
                         </page>
                         <page string="Email Configuration">
-                            <group>
-                                <field name="mail_information"/>
-                                <field name = "privacy_policy"/>
+                            <group string="Templates">
+                                <field name="property_confirmed_template" />
+                                <field name="property_modified_template" />
+                                <field name="property_canceled_template" />
+                            </group>
+                            <group string="Mail Information" colspan="4">
+                                <field
+                                    name="mail_information"
+                                    string="Aditional Mail Information"
+                                />
+                                <field name="privacy_policy" />
                             </group>
                         </page>
                     </notebook>
