[IMP]: added buttons from send email in pms.reservation

--- a/pms/views/pms_automated_mails_views.xml
+++ b/pms/views/pms_automated_mails_views.xml
@@ -51,6 +51,9 @@
                     <field name="name" />
                     <field name="action" />
                     <field name="template_id" />
+                    <field name="moment" />
+                    <field name="time" />
+                    <field name="time_type" />
                 </tree>
             </field>
         </record>
