--- a/pms/views/pms_reservation_views.xml
+++ b/pms/views/pms_reservation_views.xml
@@ -43,7 +43,27 @@
                         states="onboard,departure_delayed"
                         type="object"
                     />
+                    <button
+                        name="action_open_mail_composer"
+                        string="Send Confirmation Email "
+                        type="object"
+                        attrs="{'invisible':['|','|',('is_mail_send', '=', True),('is_modified_reservation', '=', True),('state', 'in', 'cancel')]}"
+                    />
+                    <button
+                        name="action_open_mail_composer"
+                        string="Send Modification Email "
+                        type="object"
+                        attrs="{'invisible':['|','|',('is_mail_send', '=', True), ('is_modified_reservation', '=', False), ('state', 'in', 'cancel')]}"
+                    />
+                    <button
+                        name="action_open_mail_composer"
+                        string="Send Cancellation Email "
+                        type="object"
+                        attrs="{'invisible':['|',('is_mail_send', '=', True), ('state', 'not in', 'cancel')]}"
+                    />
                     <field name="state" widget="statusbar" />
+                    <field name="is_mail_send" invisible="1" />
+                    <field name="is_modified_reservation" invisible="1" />
                 </header>
                 <div
                     class="alert alert-info"
@@ -1043,4 +1063,33 @@
         <field name="binding_view_types">form</field>
     </record>
 
+    <record id="action_resend_confirmation_email" model="ir.actions.act_window">
+        <field name="name">Resend confirmation email</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">mail.compose.message</field>
+        <field name="view_mode">form</field>
+        <field name="target">new</field>
+        <field name="binding_model_id" ref="pms.model_pms_reservation" />
+        <field name="binding_view_types">form</field>
+    </record>
+
+    <record id="action_resend_modification_email" model="ir.actions.act_window">
+        <field name="name">Resend modification email</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">mail.compose.message</field>
+        <field name="view_mode">form</field>
+        <field name="target">new</field>
+        <field name="binding_model_id" ref="pms.model_pms_reservation" />
+        <field name="binding_view_types">form</field>
+    </record>
+
+    <record id="action_resend_cancellation_email" model="ir.actions.act_window">
+        <field name="name">Resend cancellation email</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">mail.compose.message</field>
+        <field name="view_mode">form</field>
+        <field name="target">new</field>
+        <field name="binding_model_id" ref="pms.model_pms_reservation" />
+        <field name="binding_view_types">form</field>
+    </record>
 </odoo>
